[gd_scene load_steps=11 format=3 uid="uid://b4f8wiwkdxhq8"]

[ext_resource type="Script" path="res://Scripts/ForumBoardCard.gd" id="1_vdsqv"]
[ext_resource type="Texture2D" uid="uid://cqu4jim0gxmhd" path="res://Resources/Textures/Image.svg" id="2_4djen"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pdtu5"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lg4kl"]
bg_color = Color(0, 0.403922, 0.752941, 1)
corner_radius_top_left = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_55a0c"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p4h2u"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mlrlv"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_gy6cg"]
resource_name = "Focus"
length = 0.1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/HBoxContainer/ColorRect:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(4, 0)]
}

[sub_resource type="Animation" id="Animation_bmy3d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/HBoxContainer/ColorRect:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bgv6c"]
_data = {
"Focus": SubResource("Animation_gy6cg"),
"RESET": SubResource("Animation_bmy3d")
}

[node name="ForumBoardCard" type="PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(184, 40)
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pdtu5")
script = ExtResource("1_vdsqv")

[node name="IconRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="ColorRect" type="PanelContainer" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lg4kl")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Mask" type="PanelContainer" parent="HBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
clip_children = 1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_55a0c")

[node name="IconTexture" type="TextureRect" parent="HBoxContainer/HBoxContainer/MarginContainer/HBoxContainer/Mask"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("2_4djen")
expand_mode = 1

[node name="NameLabel" type="Label" parent="HBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
text = "Name"
text_overrun_behavior = 3

[node name="IsHot" type="PanelContainer" parent="HBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.196078, 0.407843, 0.913725, 1)
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_p4h2u")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/MarginContainer"]
self_modulate = Color(0.964706, 0.964706, 0.964706, 1)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mlrlv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_bgv6c")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
